--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typecheck": "tsc --noEmit"
   },
   "imports": {
-    "#controllers/*": "./app/controllers/*.js",
+    "#controllers/*": "./app/controllers/*",
     "#exceptions/*": "./app/exceptions/*.js",
     "#models/*": "./app/models/*.js",
     "#mails/*": "./app/mails/*.js",
@@ -42,7 +42,7 @@
     "@japa/runner": "^4.2.0",
     "@swc/core": "1.11.24",
     "@types/luxon": "^3.6.2",
-    "@types/node": "^22.15.18",
+    "@types/node": "^22.15.32",
     "eslint": "^9.26.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
@@ -58,7 +58,8 @@
     "@vinejs/vine": "^3.0.1",
     "luxon": "^3.6.1",
     "mysql2": "^3.14.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "tsconfig-paths": "^4.2.0"
   },
   "hotHook": {
     "boundaries": [
